--- a/course.css
+++ b/course.css
@@ -1,8 +1,11 @@
 body {
     font-family: Arial;
-    background: #f5f7fa;
+    background-image: url("https://media.istockphoto.com/id/1346141988/video/4k-abstract-digital-technology-background.avif?s=640x640&k=20&c=bZ7wn-CPsbC2fp3oHm7dCZPEX2gyu_SiFqEolLBRYJk=");
+    background-size: cover;
     margin: 0;
+    color: #f7f5f5;
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .level-buttons {
@@ -31,7 +34,7 @@ button:hover {
 }
 
 .course-card {
-    background: white;
+    background: rgba(247, 247, 247, 0.945);
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     padding-bottom: 15px;
@@ -47,6 +50,7 @@ button:hover {
 
 .course-card h3 {
     margin: 15px 0;
+    color:black
 }
 
 .video-container {
@@ -60,7 +64,7 @@ button:hover {
     text-align: center;
     font-size: 18px;
     line-height: 1.6;
-    color: #333;
+    color: #f5f0f0;
 }
 
 .level-images {
@@ -91,7 +95,7 @@ button:hover {
     margin-top: 10px;
     font-weight: bold;
     font-size: 18px;
-    color: #333;
+    color: #f7f5f5;
 }
 
 .level-buttons {
