--- a/log.css
+++ b/log.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: Arial;
 }
@@ -11,4 +11,101 @@ input {
 
 button {
   padding: 8px 20px;
+}*/
+/* Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Body Styling */
+body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url("https://img.freepik.com/free-photo/clipboard-with-ribbons-candles_23-2147628613.jpg");
+    font-family: 'Times New Roman', Times, serif;
+    background-size: cover;
+    background-position: center;
+}
+
+/* Heading */
+h2 {
+    margin-bottom: 20px;
+    font-size: 28px;
+    color: #000;
+}
+
+/* Login Box */
+#loginForm {
+     background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20201101/pngtree-scene-with-geometrical-forms-the-poster-model-minimal-background-render-image_452981.jpg");
+    background-size: cover;
+    padding: 30px;
+    width: 90%;
+    max-width: 400px;
+    border-radius: 15px;
+    box-shadow: 10px 10px 30px rgba(31, 28, 29, 0.744);
+    text-align: center;
+}
+
+/* Inputs */
+input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    outline: none;
+    font-size: 14px;
+}
+
+input:focus {
+    border-color: #1e90ff;
+}
+
+/* Blue Gradient Button */
+button {
+    width: 100%;
+    padding: 12px;
+    margin-top: 12px;
+    border: none;
+    border-radius: 8px;
+    background: linear-gradient(135deg, #34f4fb,rgb(248, 244, 244), #4ba28f);    
+    color: rgb(10, 10, 10);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 700;
+    font-size: 20px;
+    
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+button:hover {
+    background: linear-gradient(135deg,  #75e4e8,rgb(252, 249, 249), #35a990);
+    box-shadow: 0 8px 20px rgba(0, 81, 171, 0.4);
+    transform: translateY(-2px);
+}
+
+button:active {
+    transform: scale(0.97);
+}
+
+/* Paragraph & Link */
+p {
+    margin-top: 15px;
+    text-align: center;
+}
+
+a {
+    color: #dbe4ed;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+a:hover {
+    text-decoration: underline;
+    color:#0854a9;
 }
